# Tile_game

./: .gitignore  README.md  coin.cpp  main.cpp  notes.md  test.py
CoinFlip/: CMakeLists.txt  coin.cpp
CoinFlip/include/: example.h
CoinFlip/src/: example.cpp  main.cpp
CoinFlip/tests/: test_main.cpp
Python/: main.py
coins/: comb.cpp
cpp_solution/: Makefile
cpp_solution/Python/: combinations.py
cpp_solution/coins/: coin.cpp
cpp_solution/include/: GameBoard.h  utils.h
cpp_solution/simpleCpp/: Makefile  main.cpp  main_test.cpp  runTests
cpp_solution/src/: main.cpp  utils.cpp
cpp_solution/test/: Makefile
cpp_solution/testing/: .clangd  main
include/: GameBoard.h  Tile.h  utils.h
rust_solution/: Cargo.toml
rust_solution/src/: main.rs
simpleCpp/: MakeFile  Makefile  main.cpp  notes.md
src/: GameBoard.cpp  Tile.cpp  main.cpp  main2.ccp  main2.cpp  utils.cpp
test/: test_main.cpp
testing/: Makefile
